Crash in Particle System, Connect Hair #40638

Closed
opened 2014-06-15 12:06:46 +02:00 by Kresimir Kis · 5 comments

System Information
Tested on two machines, Windows 7 with AMD and Windows 8.1 with Nvidia.

Blender Version
Tested on two Blender versions: official 2.70a and the release candidate 2.71.

Broken: 2.70a f93bc76 (official 2.70a) and 2.71 release candidate 169c95b
Worked: (optional)

Short description of error
Blender crashes when you press the Connect Hair button.

Exact steps for others to reproduce the error
Open the attached blend file.
In the particle system tab, press "Disconnect Hair" button.
It changes to "Connect Hair".
Then press the "Connect Hair" button.
Boom!
hair012.blend

**System Information** Tested on two machines, Windows 7 with AMD and Windows 8.1 with Nvidia. **Blender Version** Tested on two Blender versions: official 2.70a and the release candidate 2.71. Broken: 2.70a f93bc76 (official 2.70a) and 2.71 release candidate 169c95b Worked: (optional) **Short description of error** Blender crashes when you press the Connect Hair button. **Exact steps for others to reproduce the error** Open the attached blend file. In the particle system tab, press "Disconnect Hair" button. It changes to "Connect Hair". Then press the "Connect Hair" button. Boom! [hair012.blend](https://archive.blender.org/developer/F94355/hair012.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @KresimirKis

Added subscriber: @KresimirKis

This issue was referenced by 10c74ec034

This issue was referenced by 10c74ec0344ada0e2022d2d17913fcb82dfb2690

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 10c74ec034.

Closed by commit 10c74ec034.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40638
No description provided.