Fix T40638: Crash in Particle System, Connect Hair